[gd_scene load_steps=23 format=4 uid="uid://vr4gpklva2fy"]

[ext_resource type="TileSet" uid="uid://basn5qc3xc287" path="res://assets/tilemaps/tilesets/outside.tres" id="1_ffn58"]
[ext_resource type="Script" uid="uid://cwqbp48iybem6" path="res://scripts/environment/interactables/steven_drown.gd" id="2_bv3bl"]
[ext_resource type="PackedScene" uid="uid://bcyrg6u8o2mbx" path="res://scenes/player/player.tscn" id="2_yxyrh"]
[ext_resource type="Texture2D" uid="uid://rsbebf2x2jua" path="res://assets/sprites/npc/steven/steven_drown_ss.png" id="3_e41oj"]
[ext_resource type="PackedScene" uid="uid://cpc43ol1uaidh" path="res://scenes/ui/dialogue_system.tscn" id="4_nsp88"]
[ext_resource type="Texture2D" uid="uid://ct685wmm3j36u" path="res://assets/sprites/npc/steven/steven_idle.png" id="5_rrviv"]
[ext_resource type="Script" uid="uid://2btuqnthkqtt" path="res://scripts/environment/interactables/dialogue_test.gd" id="6_1yr7f"]
[ext_resource type="PackedScene" uid="uid://dblxc7qly0lmm" path="res://scenes/ui/interact_ui.tscn" id="6_umjnc"]
[ext_resource type="PackedScene" uid="uid://c2akmqrsxsnxp" path="res://scenes/environment/exits/enter_home.tscn" id="8_y5h3l"]
[ext_resource type="PackedScene" uid="uid://do40dayd8hy1q" path="res://scenes/environment/exits/bridge.tscn" id="10_gwk5c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h5q2f"]
atlas = ExtResource("3_e41oj")
region = Rect2(0, 0, 300, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_88mi5"]
atlas = ExtResource("3_e41oj")
region = Rect2(300, 0, 300, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvdep"]
atlas = ExtResource("3_e41oj")
region = Rect2(600, 0, 300, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3qkr"]
atlas = ExtResource("3_e41oj")
region = Rect2(900, 0, 300, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs61t"]
atlas = ExtResource("3_e41oj")
region = Rect2(1200, 0, 300, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_fidl1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5q2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88mi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvdep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3qkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs61t")
}],
"loop": true,
"name": &"new_animation",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5q2f"]
size = Vector2(348.27545, 524.1377)

[sub_resource type="AtlasTexture" id="AtlasTexture_q88vh"]
atlas = ExtResource("5_rrviv")
region = Rect2(0, 0, 860, 920)

[sub_resource type="AtlasTexture" id="AtlasTexture_wket6"]
atlas = ExtResource("5_rrviv")
region = Rect2(860, 0, 860, 920)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbe43"]
atlas = ExtResource("5_rrviv")
region = Rect2(1720, 0, 860, 920)

[sub_resource type="SpriteFrames" id="SpriteFrames_8x5y0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q88vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wket6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbe43")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bx4o6"]
size = Vector2(100.5, 118.75)

[node name="Outside" type="Node2D"]

[node name="GroundLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//wAAAQAJAAwAAAD//wEAAQAJAAwAAAAAAAEAAQAIAAwAAAD//wIAAQAJAAwAAAAAAAIAAQAIAAwAAAABAAEAAQAJAAwAAAABAAIAAQAJAAwAAAACAAIAAQAIAAwAAAADAP//AQAJAAwAAAAEAP//AQAIAAwAAAADAAAAAQAJAAwAAAAEAAAAAQAIAAwAAAD//wMAAQAJAAwAAAAAAAMAAQAIAAwAAAABAAMAAQAJAAwAAAACAAMAAQAIAAwAAAAFAP//AQAJAAwAAAAGAP//AQAIAAwAAAAFAAAAAQAJAAwAAAAGAAAAAQAIAAwAAAAGAAEAAQAIAAwAAAAGAAIAAQAIAAwAAAAGAAMAAQAIAAwAAAD9//3/AQAIAAwAAAD+//3/AQAJAAwAAAD9//7/AQAIAAwAAAD+//7/AQAJAAwAAAD9////AQAIAAwAAAD+////AQAIAAwAAAD9/wAAAQAIAAwAAAD+/wAAAQAIAAwAAAD9/wEAAQAIAAwAAAD+/wEAAQAIAAwAAAD9/wIAAQAIAAwAAAD+/wIAAQAIAAwAAAD9/wMAAQAIAAwAAAD+/wMAAQAIAAwAAAD9/wQAAQAIAAwAAAD+/wQAAQAIAAwAAAD9/wUAAQAIAAwAAAD+/wUAAQAJAAwAAAD9/wYAAQAIAAwAAAD+/wYAAQAJAAwAAAD///3/AQAIAAwAAAAAAP3/AQAJAAwAAAD///7/AQAIAAwAAAAAAP7/AQAJAAwAAAD//wQAAQAJAAwAAAAAAAQAAQAIAAwAAAD//wUAAQAIAAwAAAAAAAUAAQAJAAwAAAD//wYAAQAIAAwAAAAAAAYAAQAJAAwAAAABAP3/AQAIAAwAAAACAP3/AQAJAAwAAAABAP7/AQAIAAwAAAACAP7/AQAJAAwAAAABAAQAAQAJAAwAAAACAAQAAQAIAAwAAAABAAUAAQAIAAwAAAACAAUAAQAJAAwAAAABAAYAAQAIAAwAAAACAAYAAQAJAAwAAAADAP3/AQAIAAwAAAAEAP3/AQAJAAwAAAADAP7/AQAIAAwAAAAEAP7/AQAJAAwAAAADAAQAAQAJAAwAAAAEAAQAAQAIAAwAAAADAAUAAQAIAAwAAAAEAAUAAQAJAAwAAAADAAYAAQAIAAwAAAAEAAYAAQAJAAwAAAAFAP3/AQAIAAwAAAAGAP3/AQAJAAwAAAAFAP7/AQAIAAwAAAAGAP7/AQAJAAwAAAAFAAQAAQAJAAwAAAAGAAQAAQAIAAwAAAAFAAUAAQAIAAwAAAAGAAUAAQAJAAwAAAAFAAYAAQAIAAwAAAAGAAYAAQAJAAwAAAAHAP3/AQAIAAwAAAAIAP3/AQAJAAwAAAAHAP7/AQAIAAwAAAAIAP7/AQAJAAwAAAAHAP//AQAJAAwAAAAIAP//AQAJAAwAAAAHAAAAAQAJAAwAAAAIAAAAAQAJAAwAAAAHAAEAAQAJAAwAAAAIAAEAAQAJAAwAAAAHAAIAAQAJAAwAAAAIAAIAAQAJAAwAAAAHAAMAAQAJAAwAAAAIAAMAAQAJAAwAAAAHAAQAAQAJAAwAAAAIAAQAAQAJAAwAAAAHAAUAAQAIAAwAAAAIAAUAAQAJAAwAAAAHAAYAAQAIAAwAAAAIAAYAAQAJAAwAAAAJAP3/AQAIAAwAAAAKAP3/AQAJAAwAAAAJAP7/AQAIAAwAAAAKAP7/AQAJAAwAAAAJAP//AQAIAAwAAAAKAP//AQAJAAwAAAAJAAAAAQAIAAwAAAAKAAAAAQAJAAwAAAAJAAEAAQAIAAwAAAAKAAEAAQAJAAwAAAAJAAIAAQAIAAwAAAAKAAIAAQAJAAwAAAAJAAMAAQAIAAwAAAAKAAMAAQAJAAwAAAAJAAQAAQAIAAwAAAAKAAQAAQAJAAwAAAAJAAUAAQAIAAwAAAAKAAUAAQAJAAwAAAAJAAYAAQAIAAwAAAAKAAYAAQAJAAwAAAD5//r/AQAIAAwAAAD6//r/AQAJAAwAAAD5//v/AQAIAAwAAAD6//v/AQAJAAwAAAD5//z/AQAIAAwAAAD6//z/AQAJAAwAAAD5//3/AQAIAAwAAAD6//3/AQAJAAwAAAD5//7/AQAIAAwAAAD6//7/AQAJAAwAAAD5////AQAIAAwAAAD6////AQAJAAwAAAD5/wAAAQAIAAwAAAD6/wAAAQAJAAwAAAD5/wEAAQAIAAwAAAD6/wEAAQAJAAwAAAD5/wIAAQAIAAwAAAD6/wIAAQAJAAwAAAD5/wMAAQAIAAwAAAD6/wMAAQAJAAwAAAD5/wQAAQAIAAwAAAD6/wQAAQAJAAwAAAD5/wUAAQAIAAwAAAD6/wUAAQAJAAwAAAD5/wYAAQAIAAwAAAD6/wYAAQAJAAwAAAD5/wcAAQAIAAwAAAD6/wcAAQAJAAwAAAD5/wgAAQAIAAwAAAD6/wgAAQAJAAwAAAD5/wkAAQAIAAwAAAD6/wkAAQAJAAwAAAD7//r/AQAIAAwAAAD8//r/AQAJAAwAAAD7//v/AQAIAAwAAAD8//v/AQAJAAwAAAD7//z/AQAIAAwAAAD8//z/AQAJAAwAAAD7//3/AQAIAAwAAAD8//3/AQAJAAwAAAD7//7/AQAIAAwAAAD8//7/AQAJAAwAAAD7////AQAIAAwAAAD8////AQAJAAwAAAD7/wAAAQAIAAwAAAD8/wAAAQAJAAwAAAD7/wEAAQAIAAwAAAD8/wEAAQAJAAwAAAD7/wIAAQAIAAwAAAD8/wIAAQAJAAwAAAD7/wMAAQAIAAwAAAD8/wMAAQAJAAwAAAD7/wQAAQAIAAwAAAD8/wQAAQAJAAwAAAD7/wUAAQAIAAwAAAD8/wUAAQAJAAwAAAD7/wYAAQAIAAwAAAD8/wYAAQAJAAwAAAD7/wcAAQAIAAwAAAD8/wcAAQAJAAwAAAD7/wgAAQAIAAwAAAD8/wgAAQAJAAwAAAD7/wkAAQAIAAwAAAD8/wkAAQAJAAwAAAD9//r/AQAIAAwAAAD+//r/AQAJAAwAAAD9//v/AQAIAAwAAAD+//v/AQAJAAwAAAD9//z/AQAIAAwAAAD+//z/AQAJAAwAAAD9/wcAAQAIAAwAAAD+/wcAAQAJAAwAAAD9/wgAAQAIAAwAAAD+/wgAAQAJAAwAAAD9/wkAAQAIAAwAAAD+/wkAAQAJAAwAAAD///r/AQAIAAwAAAAAAPr/AQAJAAwAAAD///v/AQAIAAwAAAAAAPv/AQAJAAwAAAD///z/AQAIAAwAAAAAAPz/AQAJAAwAAAD//wcAAQAIAAwAAAAAAAcAAQAJAAwAAAD//wgAAQAIAAwAAAAAAAgAAQAJAAwAAAD//wkAAQAIAAwAAAAAAAkAAQAJAAwAAAABAPr/AQAIAAwAAAACAPr/AQAJAAwAAAABAPv/AQAIAAwAAAACAPv/AQAJAAwAAAABAPz/AQAIAAwAAAACAPz/AQAJAAwAAAABAAcAAQAIAAwAAAACAAcAAQAJAAwAAAABAAgAAQAIAAwAAAACAAgAAQAJAAwAAAABAAkAAQAIAAwAAAACAAkAAQAJAAwAAAADAPr/AQAIAAwAAAAEAPr/AQAJAAwAAAADAPv/AQAIAAwAAAAEAPv/AQAJAAwAAAADAPz/AQAIAAwAAAAEAPz/AQAJAAwAAAADAAcAAQAIAAwAAAAEAAcAAQAJAAwAAAADAAgAAQAIAAwAAAAEAAgAAQAJAAwAAAADAAkAAQAIAAwAAAAEAAkAAQAJAAwAAAAFAPr/AQAIAAwAAAAGAPr/AQAJAAwAAAAFAPv/AQAIAAwAAAAGAPv/AQAJAAwAAAAFAPz/AQAIAAwAAAAGAPz/AQAJAAwAAAAFAAcAAQAIAAwAAAAGAAcAAQAJAAwAAAAFAAgAAQAIAAwAAAAGAAgAAQAJAAwAAAAFAAkAAQAIAAwAAAAGAAkAAQAJAAwAAAAHAPr/AQAIAAwAAAAIAPr/AQAJAAwAAAAHAPv/AQAIAAwAAAAIAPv/AQAJAAwAAAAHAPz/AQAIAAwAAAAIAPz/AQAJAAwAAAAHAAcAAQAIAAwAAAAIAAcAAQAJAAwAAAAHAAgAAQAIAAwAAAAIAAgAAQAJAAwAAAAHAAkAAQAIAAwAAAAIAAkAAQAJAAwAAAAJAPr/AQAIAAwAAAAKAPr/AQAJAAwAAAAJAPv/AQAIAAwAAAAKAPv/AQAJAAwAAAAJAPz/AQAIAAwAAAAKAPz/AQAJAAwAAAAJAAcAAQAIAAwAAAAKAAcAAQAJAAwAAAAJAAgAAQAIAAwAAAAKAAgAAQAJAAwAAAAJAAkAAQAIAAwAAAAKAAkAAQAJAAwAAAALAPr/AQAIAAwAAAAMAPr/AQAJAAwAAAALAPv/AQAIAAwAAAAMAPv/AQAJAAwAAAALAPz/AQAIAAwAAAAMAPz/AQAJAAwAAAALAP3/AQAIAAwAAAAMAP3/AQAJAAwAAAALAP7/AQAIAAwAAAAMAP7/AQAJAAwAAAALAP//AQAIAAwAAAAMAP//AQAJAAwAAAALAAAAAQAIAAwAAAAMAAAAAQAJAAwAAAALAAEAAQAIAAwAAAAMAAEAAQAJAAwAAAALAAIAAQAIAAwAAAAMAAIAAQAJAAwAAAALAAMAAQAIAAwAAAAMAAMAAQAJAAwAAAALAAQAAQAIAAwAAAAMAAQAAQAJAAwAAAALAAUAAQAIAAwAAAAMAAUAAQAJAAwAAAALAAYAAQAIAAwAAAAMAAYAAQAJAAwAAAALAAcAAQAIAAwAAAAMAAcAAQAJAAwAAAALAAgAAQAIAAwAAAAMAAgAAQAJAAwAAAALAAkAAQAIAAwAAAAMAAkAAQAJAAwAAAANAPr/AQAIAAwAAAAOAPr/AQAJAAwAAAANAPv/AQAIAAwAAAAOAPv/AQAJAAwAAAANAPz/AQAIAAwAAAAOAPz/AQAJAAwAAAANAP3/AQAIAAwAAAAOAP3/AQAJAAwAAAANAP7/AQAIAAwAAAAOAP7/AQAJAAwAAAANAP//AQAIAAwAAAAOAP//AQAJAAwAAAANAAAAAQAIAAwAAAAOAAAAAQAJAAwAAAANAAEAAQAIAAwAAAAOAAEAAQAJAAwAAAANAAIAAQAIAAwAAAAOAAIAAQAJAAwAAAANAAMAAQAIAAwAAAAOAAMAAQAJAAwAAAANAAQAAQAIAAwAAAAOAAQAAQAJAAwAAAANAAUAAQAIAAwAAAAOAAUAAQAJAAwAAAANAAYAAQAIAAwAAAAOAAYAAQAJAAwAAAANAAcAAQAIAAwAAAAOAAcAAQAJAAwAAAANAAgAAQAIAAwAAAAOAAgAAQAJAAwAAAANAAkAAQAIAAwAAAAOAAkAAQAJAAwAAAADAAEAAQAJAAwAAAAEAAEAAQAIAAwAAAACAAEAAQAIAAwAAAACAAAAAQAIAAwAAAACAP//AQAIAAwAAAABAAAAAQAJAAwAAAABAP//AQAJAAwAAAAAAAAAAQAIAAwAAAAAAP//AQAIAAwAAAD/////AQAJAAwAAAAFAAEAAQAJAAwAAAAEAAIAAQAIAAwAAAAFAAIAAQAJAAwAAAAFAAMAAQAJAAwAAAAEAAMAAQAIAAwAAAADAAMAAQAJAAwAAAADAAIAAQAJAAwAAAAPAPr/AQAIAAwAAAAQAPr/AQAJAAwAAAAPAPv/AQAIAAwAAAAQAPv/AQAJAAwAAAAPAPz/AQAIAAwAAAAQAPz/AQAJAAwAAAAPAP3/AQAIAAwAAAAQAP3/AQAJAAwAAAAPAP7/AQAIAAwAAAAQAP7/AQAJAAwAAAAPAP//AQAIAAwAAAAQAP//AQAJAAwAAAAPAAAAAQAIAAwAAAAQAAAAAQAJAAwAAAAPAAEAAQAIAAwAAAAQAAEAAQAJAAwAAAAPAAIAAQAIAAwAAAAQAAIAAQAJAAwAAAAPAAMAAQAIAAwAAAAQAAMAAQAJAAwAAAAPAAQAAQAIAAwAAAAQAAQAAQAJAAwAAAAPAAUAAQAIAAwAAAAQAAUAAQAJAAwAAAAPAAYAAQAIAAwAAAAQAAYAAQAJAAwAAAAPAAcAAQAIAAwAAAAQAAcAAQAJAAwAAAAPAAkAAQAIAAwAAAAQAAkAAQAJAAwAAAAPAAgAAQAIAAwAAAAQAAgAAQAJAAwAAAARAPr/AQAIAAwAAAASAPr/AQAJAAwAAAARAPv/AQAIAAwAAAASAPv/AQAJAAwAAAARAPz/AQAIAAwAAAASAPz/AQAJAAwAAAARAP3/AQAIAAwAAAASAP3/AQAJAAwAAAARAP7/AQAIAAwAAAASAP7/AQAJAAwAAAARAP//AQAIAAwAAAASAP//AQAJAAwAAAARAAAAAQAIAAwAAAASAAAAAQAJAAwAAAARAAEAAQAIAAwAAAASAAEAAQAJAAwAAAARAAIAAQAIAAwAAAASAAIAAQAJAAwAAAARAAMAAQAIAAwAAAASAAMAAQAJAAwAAAARAAQAAQAIAAwAAAASAAQAAQAJAAwAAAARAAUAAQAIAAwAAAASAAUAAQAJAAwAAAARAAYAAQAIAAwAAAASAAYAAQAJAAwAAAARAAcAAQAIAAwAAAASAAcAAQAJAAwAAAATAPr/AQAIAAwAAAAUAPr/AQAJAAwAAAATAPv/AQAIAAwAAAAUAPv/AQAJAAwAAAATAPz/AQAIAAwAAAAUAPz/AQAJAAwAAAATAP3/AQAIAAwAAAAUAP3/AQAJAAwAAAATAP7/AQAIAAwAAAAUAP7/AQAJAAwAAAATAP//AQAIAAwAAAAUAP//AQAJAAwAAAATAAAAAQAIAAwAAAAUAAAAAQAJAAwAAAATAAEAAQAIAAwAAAAUAAEAAQAJAAwAAAATAAIAAQAIAAwAAAAUAAIAAQAJAAwAAAATAAMAAQAIAAwAAAAUAAMAAQAJAAwAAAATAAQAAQAIAAwAAAAUAAQAAQAJAAwAAAATAAUAAQAIAAwAAAAUAAUAAQAJAAwAAAATAAYAAQAIAAwAAAAUAAYAAQAJAAwAAAATAAcAAQAIAAwAAAAUAAcAAQAJAAwAAAAVAPr/AQAIAAwAAAAWAPr/AQAJAAwAAAAVAPv/AQAIAAwAAAAWAPv/AQAJAAwAAAAVAPz/AQAIAAwAAAAWAPz/AQAJAAwAAAAVAP3/AQAIAAwAAAAWAP3/AQAJAAwAAAAVAP7/AQAIAAwAAAAWAP7/AQAJAAwAAAAVAP//AQAIAAwAAAAWAP//AQAJAAwAAAAVAAAAAQAIAAwAAAAWAAAAAQAJAAwAAAAVAAEAAQAIAAwAAAAWAAEAAQAJAAwAAAAVAAIAAQAIAAwAAAAWAAIAAQAJAAwAAAAVAAMAAQAIAAwAAAAWAAMAAQAJAAwAAAAVAAQAAQAIAAwAAAAWAAQAAQAJAAwAAAAVAAUAAQAIAAwAAAAWAAUAAQAJAAwAAAAVAAYAAQAIAAwAAAAWAAYAAQAJAAwAAAAVAAcAAQAIAAwAAAAWAAcAAQAJAAwAAAAXAPr/AQAIAAwAAAAXAPv/AQAIAAwAAAAXAPz/AQAIAAwAAAAXAP3/AQAIAAwAAAAXAP7/AQAIAAwAAAAXAP//AQAIAAwAAAAXAAAAAQAIAAwAAAAXAAEAAQAIAAwAAAAXAAIAAQAIAAwAAAAXAAMAAQAIAAwAAAAXAAQAAQAIAAwAAAAXAAUAAQAIAAwAAAAXAAYAAQAIAAwAAAAXAAcAAQAIAAwAAAARAAgAAQAIAAwAAAASAAgAAQAJAAwAAAARAAkAAQAIAAwAAAASAAkAAQAJAAwAAAATAAgAAQAIAAwAAAAUAAgAAQAJAAwAAAATAAkAAQAIAAwAAAAUAAkAAQAJAAwAAAAVAAgAAQAIAAwAAAAWAAgAAQAJAAwAAAAVAAkAAQAIAAwAAAAWAAkAAQAJAAwAAAAXAAgAAQAIAAwAAAAXAAkAAQAIAAwAAAA=")
tile_set = ExtResource("1_ffn58")

[node name="MountainLayer1" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+////AQAGAAsAAAD/////AQAGAAsAAAD//wAAAQAGAAsAAAD+/wAAAQAGAAsAAAD9/wAAAQAGAAsAAAD9////AQAGAAsAAAD9//7/AQAGAAsAAAD+//7/AQAGAAsAAAD///7/AQAGAAsAAAD//wEAAQAGAAsAAAD+/wEAAQAGAAsAAAD9/wEAAQAGAAsAAAD//wIAAQAGAAwAAAD+/wIAAQAGAAwAAAD9/wIAAQAGAAwAAAAAAAEAAQAGAAsAAAAAAAIAAQAGAAwAAAAAAAAAAQAGAAsAAAABAAEABAAMAAsAAAABAAIAAQAHAAwAAAABAAAABAAHAAsAAAAAAP//AQAGAAsAAAABAP//AQAHAAsAAAAAAP7/AQAGAAsAAAABAP7/AQAHAAsAAAAFAP//AQAGAAsAAAAGAP//AQAGAAsAAAAGAAAAAQAGAAsAAAAFAAAAAQAGAAsAAAAEAAAABAAFAAsAAAAEAP//AQAFAAsAAAAEAP7/AQAFAAoAAAAFAP7/AQAGAAoAAAAGAP7/AQAGAAoAAAAGAAEAAQAGAAsAAAAFAAEAAQAGAAsAAAAEAAEABAAKAAsAAAAGAAIAAQAGAAwAAAAFAAIAAQAGAAwAAAAEAAIAAQAFAAwAAAAHAAEAAQAGAAsAAAAHAAIAAQAGAAwAAAAHAAAAAQAGAAsAAAAHAP//AQAGAAsAAAAHAP7/AQAGAAoAAAAIAP//AQAIAAsAAAAIAAAAAQAGAAsAAAAIAP7/AQAHAAoAAAAIAAEAAQAGAAsAAAAIAAIAAQAGAAwAAAAJAAAAAQAGAAsAAAAJAAEAAQAGAAsAAAAJAP//AQAGAAoAAAAKAAAABAARAAsAAAAKAAEAAQAHAAsAAAAKAP//BAAMAAoAAAAJAAIAAQAGAAwAAAAKAAIAAQAHAAwAAAD8/wAAAQAGAAsAAAD8////AQAGAAsAAAD8//7/AQAGAAsAAAD8/wEAAQAGAAsAAAD8/wIAAQAGAAwAAAD///3/AQAGAAoAAAAAAP3/AQAGAAoAAAABAP3/AQAHAAoAAAD+//3/AQAGAAoAAAD9//3/AQAGAAoAAAD8//3/AQAGAAoAAAD7////AQAFAAsAAAD7//7/AQAFAAsAAAD7//3/AQAFAAoAAAD7/wAAAQAFAAsAAAD7/wEAAQAFAAsAAAD7/wIAAQAFAAwAAAA=")
tile_set = ExtResource("1_ffn58")

[node name="MountainLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+////AQAJAAMAAAD/////AQAJAAMAAAD//wAAAQAJAAMAAAD+/wAAAQAJAAMAAAD9/wAAAQAJAAMAAAD9////AQAJAAMAAAD+//7/AQAJAAMAAAD///7/AQAJAAMAAAD//wEAAQAJAAMAAAD+/wEAAQAJAAMAAAD9/wEAAQAJAAMAAAAAAAAAAQAJAAMAAAAAAAEAAQAJAAMAAAAAAAIAAQAJAAQAAAD//wIAAQAJAAQAAAD+/wIAAQAJAAQAAAABAAEAAQAKAAMAAAABAAIAAQAKAAQAAAABAAAAAQAKAAMAAAAAAP//AQAJAAMAAAABAP//AQAKAAMAAAAAAP7/AQAJAAMAAAABAP7/AQAKAAMAAAD9/wIAAQAJAAQAAAAFAP//AQAJAAMAAAAGAP//AQAJAAMAAAAGAAAAAQAJAAMAAAAFAAAAAQAJAAMAAAAEAAAAAQAIAAMAAAAEAP//AQAIAAMAAAAEAP7/AQAIAAIAAAAFAP7/AQAJAAIAAAAGAP7/AQAJAAIAAAAHAP//AQAJAAMAAAAHAAAAAQAJAAMAAAAHAP7/AQAJAAIAAAAHAAEAAQAJAAMAAAAGAAEAAQAJAAMAAAAFAAEAAQAJAAMAAAAHAAIAAQAJAAQAAAAGAAIAAQAJAAQAAAAFAAIAAQAJAAQAAAAEAAIAAQAIAAQAAAAEAAEAAQAIAAMAAAAIAP//AQAJAAIAAAAIAAAAAQAJAAMAAAAIAP7/AQAKAAIAAAAIAAEAAQAJAAMAAAAIAAIAAQAJAAQAAAAJAAAAAQAJAAMAAAAJAAEAAQAJAAMAAAAJAP//AQAJAAIAAAAKAAAAAQAKAAMAAAAKAAEAAQAKAAMAAAAKAP//AQAKAAIAAAAJAAIAAQAJAAQAAAAKAAIAAQAKAAQAAAD7/wMAAwAFAAsAAAACAAMAAwAFAAsAABAMAAIAAwAFAAsAABACAP7/AwAFAAsAAAD8//7/AQAJAAMAAAD8/wAAAQAJAAMAAAD8////AQAJAAMAAAD9//7/AQAJAAMAAAD8/wEAAQAJAAMAAAD8/wIAAQAJAAQAAAD7/wIAAQAIAAQAAAD7/wEAAQAIAAMAAAD7/wAAAQAIAAMAAAD7////AQAIAAMAAAD7//7/AQAIAAMAAAD7//3/AQAIAAIAAAD8//3/AQAJAAIAAAD9//3/AQAJAAIAAAD+//3/AQAJAAIAAAD///3/AQAJAAIAAAAAAP3/AQAJAAIAAAABAP3/AQAKAAIAAAA=")
tile_set = ExtResource("1_ffn58")

[node name="PathLayer" type="TileMapLayer" parent="."]
scale = Vector2(0.25, 0.25)
tile_map_data = PackedByteArray("AAD5////AQACAAsAAAD6////AQADAAsAAAD6/wAAAQADAAsAAAD5/wAAAQACAAsAAAD4/wAAAQABAAsAAAD4////AQABAAsAAAD4//7/AQABAAoAAAD5//7/AQACAAoAAAD6//7/AQADAAoAAAD6/wEAAQADAAsAAAD5/wEAAQACAAsAAAD4/wEAAQABAAsAAAD6/wIAAQACAAsAAAD5/wIAAQACAAsAAAD4/wIAAQABAAsAAAD6/wMAAQACAAsAAAD5/wMAAQACAAsAAAD4/wMAAQABAAsAAAD6/wQAAQACAAwAAAD5/wQAAQACAAwAAAD4/wQAAQABAAwAAAD7/wMAAQACAAsAAAD7/wQAAQACAAwAAAD7/wIAAQACAAoAAAD8/wMAAQACAAsAAAD8/wQAAQACAAwAAAD8/wIAAQACAAoAAAD9/wMAAQACAAsAAAD9/wQAAQACAAwAAAD9/wIAAQACAAoAAAD+/wMAAQACAAsAAAD+/wQAAQACAAwAAAD+/wIAAQACAAoAAAD//wMAAQACAAsAAAD//wQAAQACAAwAAAD//wIAAQACAAoAAAAAAAMAAQACAAsAAAAAAAQAAQACAAwAAAAAAAIAAQACAAoAAAABAAMAAQACAAsAAAABAAQAAQACAAwAAAABAAIAAQACAAoAAAACAAMAAQACAAsAAAACAAQAAQACAAwAAAACAAIAAQACAAoAAAADAAMAAQACAAsAAAADAAQAAQACAAwAAAADAAIAAQACAAoAAAAEAAMAAQACAAsAAAAEAAQAAQACAAwAAAAEAAIAAQACAAoAAAAFAAMAAQADAAsAAAAFAAQAAQADAAwAAAAFAAIAAQADAAoAAAATAAMAAQACAAsAAAAUAAMAAQACAAsAAAAUAAQAAQACAAwAAAATAAQAAQACAAwAAAASAAQAAQABAAwAAAASAAMAAQABAAsAAAASAAIAAQABAAoAAAATAAIAAQACAAoAAAAUAAIAAQACAAoAAAAVAAMAAQACAAsAAAAVAAQAAQACAAwAAAAVAAIAAQACAAoAAAAWAAMAAQACAAsAAAAWAAQAAQACAAwAAAAWAAIAAQACAAoAAAAXAAMAAQACAAsAAAAXAAQAAQACAAsAAAAXAAIAAQACAAoAAAAYAAMAAQACAAsAAAAYAAQAAQACAAsAAAAYAAIAAQACAAoAAAAZAAMAAQACAAsAAAAZAAQAAQACAAsAAAAZAAIAAQADAAoAAAAZAAUAAQACAAwAAAAYAAUAAQACAAwAAAAXAAUAAQABAAwAAAAaAAQAAQACAAsAAAAaAAUAAQACAAwAAAAaAAMAAQACAAoAAAAbAAQAAQACAAsAAAAbAAUAAQACAAwAAAAbAAMAAQACAAoAAAAcAAQAAQACAAsAAAAcAAUAAQACAAwAAAAcAAMAAQACAAoAAAAdAAQAAQACAAsAAAAdAAUAAQACAAwAAAAdAAMAAQACAAoAAAAeAAQAAQACAAsAAAAfAAQAAQACAAsAAAAfAAUAAQACAAwAAAAeAAUAAQACAAwAAAAeAAMAAQACAAoAAAAfAAMAAQACAAoAAAAgAAQAAQACAAsAAAAgAAUAAQACAAwAAAAgAAMAAQACAAoAAAAhAAQAAQACAAsAAAAhAAUAAQACAAwAAAAhAAMAAQACAAoAAAAiAAQAAQACAAsAAAAiAAUAAQACAAwAAAAiAAMAAQACAAoAAAAjAAQAAQACAAsAAAAjAAUAAQACAAwAAAAjAAMAAQACAAoAAAAkAAQAAQACAAsAAAAkAAUAAQACAAwAAAAkAAMAAQACAAoAAAAlAAQAAQACAAsAAAAlAAUAAQACAAwAAAAlAAMAAQACAAoAAAAmAAQAAQACAAsAAAAmAAUAAQACAAwAAAAmAAMAAQACAAsAAAAnAAQAAQACAAsAAAAoAAQAAQADAAsAAAAoAAUAAQADAAwAAAAnAAUAAQACAAwAAAAnAAMAAQACAAsAAAAoAAMAAQADAAsAAAAmAAIAAQABAAsAAAAnAAIAAQACAAsAAAAoAAIAAQACAAsAAAAnAAEAAQACAAsAAAAoAAEAAQACAAsAAAAmAAEAAQABAAsAAAAmAAAAAQABAAoAAAAnAAAAAQACAAoAAAAoAAAAAQACAAoAAAApAAEAAQADAAsAAAApAAAAAQADAAoAAAApAAIAAQADAAwAAAA=")
tile_set = ExtResource("1_ffn58")

[node name="SpriteLayer" type="TileMapLayer" parent="."]
scale = Vector2(0.3, 0.3)
tile_map_data = PackedByteArray("AAAKAAMAAgABAAAAAADy//7/BQAAAAAAAAAoAAEAAgABAAAAAAAuAAEAAgABAAAAAAA0AAEAAgABAAAAAAA6AAEAAgABAAAAAAA9AAEAAgABAAAAAABAAAEAAgABAAAAAABDAAEAAgABAAAAAABGAAEAAgABAAAAAABJAAEAAgABAAAAAABMAAEAAgABAAAAAAA=")
tile_set = ExtResource("1_ffn58")

[node name="Steven" type="Area2D" parent="."]
script = ExtResource("2_bv3bl")
dialogue_system = NodePath("DialogueSystem")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Steven"]
position = Vector2(364.99997, -23.999998)
scale = Vector2(0.29, 0.29)
sprite_frames = SubResource("SpriteFrames_fidl1")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.79190886

[node name="CollisionShape2D" type="CollisionShape2D" parent="Steven"]
position = Vector2(366.00003, 22.000002)
scale = Vector2(0.29000008, 0.29000008)
shape = SubResource("RectangleShape2D_h5q2f")

[node name="DialogueSystem" parent="Steven" instance=ExtResource("4_nsp88")]
jsonsrc = "res://scripts/dialogue/steven_drown.json"

[node name="StevenSaved" type="Area2D" parent="."]
visible = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StevenSaved"]
position = Vector2(258, 43)
scale = Vector2(0.205, 0.205)
sprite_frames = SubResource("SpriteFrames_8x5y0")
autoplay = "default"
frame_progress = 0.22490346

[node name="CollisionShape2D" type="CollisionShape2D" parent="StevenSaved"]
position = Vector2(255, 30.375)
shape = SubResource("RectangleShape2D_bx4o6")

[node name="DialogueTest" type="Area2D" parent="."]
script = ExtResource("6_1yr7f")
dialogue_system = NodePath("DialogueSystem")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueTest"]
position = Vector2(1224, 208.00002)
scale = Vector2(0.29000008, 0.29000008)
shape = SubResource("RectangleShape2D_h5q2f")

[node name="DialogueSystem" parent="DialogueTest" instance=ExtResource("4_nsp88")]
jsonsrc = "res://scripts/dialogue/dialogue_test.json"

[node name="Environment" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="Environment" instance=ExtResource("2_yxyrh")]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(1850, -2)

[node name="EnvironmentLayer1" type="TileMapLayer" parent="Environment"]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AAD/////AQAEAAAAAAAAAAAAAQAEAAAAAAALAP//AQAEAAAAAAARAAAAAQAEAAAAAAAMAAAAAQABAAAAAAD5/wMAAQABAAAAAAA=")
tile_set = ExtResource("1_ffn58")

[node name="employee_standing" type="Area2D" parent="."]
script = ExtResource("3_ahgbg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="employee_standing"]
position = Vector2(2341, 825.00006)
scale = Vector2(0.475, 0.475)
sprite_frames = SubResource("SpriteFrames_ahgbg")
autoplay = "default"
frame_progress = 0.8634738

[node name="CollisionShape2D" type="CollisionShape2D" parent="employee_standing"]
position = Vector2(2328, 868)
shape = SubResource("CapsuleShape2D_m6ahn")

[node name="DialogueSystem" parent="employee_standing" instance=ExtResource("4_nsp88")]
offset_left = 2339.0
offset_top = 802.0
offset_right = 2339.0
offset_bottom = 802.0
jsonsrc = "res://scripts/dialogue/employee_standing.json"

[node name="Spawn" type="Marker2D" parent="." groups=["spawn"]]
unique_name_in_owner = true
position = Vector2(-198, -8)

[node name="EnterHome" parent="." instance=ExtResource("8_y5h3l")]
position = Vector2(-198, -93)

[node name="InteractText" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="InteractUi" parent="InteractText" instance=ExtResource("6_umjnc")]

[node name="Bridge" parent="." instance=ExtResource("10_gwk5c")]
position = Vector2(1943, 39)

[connection signal="body_entered" from="Steven" to="Steven" method="_on_body_entered"]
[connection signal="body_exited" from="Steven" to="Steven" method="_on_body_exited"]
[connection signal="body_entered" from="DialogueTest" to="DialogueTest" method="_on_body_entered"]
[connection signal="body_exited" from="DialogueTest" to="DialogueTest" method="_on_body_exited"]
